# entity/user_ent.go
@@ -31,7 +31,7 @@ type User struct {
 	FriendIds        []string        `bson:"friend_ids"`
 	Friends          []*User         `bson:"friends,omitempty"`
 	ConversationIds  []string        `bson:"conversation_ids"`
-	Conversations    []*Conversation `bson:"conversations"`
+	Conversations    []*Conversation `bson:"conversations,omitempty"`
 	IsActive         bool            `bson:"is_active"`
 	LastLoggedIn     time.Time       `bson:"last_logged_in"`
 	Otp              string          `bson:"-"`
@@ -55,7 +55,19 @@ func (e User) GetEmail() string {
 }
 
 func (e *User) LoggedIn() bool {
+	e.FriendRequests = nil
+	e.Friends = nil
+	e.Conversations = nil
 	e.LastLoggedIn = time.Now()
+	e.Status = UserStatusOnline
+	return false
+}
+
+func (e *User) LoggedOut() bool {
+	e.FriendRequests = nil
+	e.Friends = nil
+	e.Conversations = nil
+	e.Status = UserStatusOffline
 	return false
 }
 
@@ -94,16 +106,25 @@ func (e *User) OnUserUpdated(ctx context.Context, user *User, eventTime time.Tim
 	if user.AvatarUrl != "" {
 		e.AvatarUrl = user.AvatarUrl
 	}
+	e.FriendRequests = nil
+	e.Friends = nil
+	e.Conversations = nil
 	e.UpdatedAt = eventTime
 	return nil
 }
 
 func (e *User) OnUserDeleted(ctx context.Context, user *User, eventTime time.Time) error {
+	e.FriendRequests = nil
+	e.Friends = nil
+	e.Conversations = nil
 	e.DeletedAt = &eventTime
 	return nil
 }
 
 func (e *User) OnUserActive(ctx context.Context) error {
+	e.FriendRequests = nil
+	e.Friends = nil
+	e.Conversations = nil
 	e.IsActive = true
 	return nil
 }
